--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.0",
     "socket.io": "^4.5.4",
     "socket.io-client": "^4.5.4",
     "web-vitals": "^2.1.0"
