--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
+    "sequelize": "^6.26.0",
     "socket.io": "^4.5.4",
     "socket.io-client": "^4.5.4",
+    "sqlite3": "^5.1.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
