--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "babel-plugin-named-exports-order": "^0.0.2",
     "prettier": "2.8.0",
     "prop-types": "^15.8.1",
+    "react-app-rewired": "^2.2.1",
     "webpack": "^5.75.0"
   }
 }
