--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "react-dropdown": "^1.11.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
+    "reactjs-popup": "^2.0.5",
     "sequelize": "^6.26.0",
     "socket.io": "^4.5.4",
     "socket.io-client": "^4.5.4",
